--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,9 @@ body {
   margin: 80px 20px 20px 20px;
   max-width: 1200px;
 }
+.toolbar-margin {
+  margin-top: 80px;
+}
 .white {
   color: white;
 }
